dev_v0.0.2.2_add_analysis_service

--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,4 @@ __marimo__/
 
 .idea/
 /debug_tools/edge_client_connector/edge_client_connector/downloaded_recordings/
+/sub_system/analysis_service/logs/
