dev_v0.0.4.0_add_core_SM

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,4 @@ __marimo__/
 /debug_tools/simplify_mongodb_record/output/
 /sub_system/analysis_service/logs/
 /sub_system/analysis_service/models/
+/core/state_management/logs/
