--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -98,6 +98,9 @@ jobs:
       - name: 取得程式碼
         uses: actions/checkout@v4
 
+      - name: 設定 Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: 登入 GHCR
         uses: docker/login-action@v3
         with:
