--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -119,7 +119,7 @@ jobs:
       - name: 建置 State Management
         uses: docker/build-push-action@v5
         with:
-          context: core/state_management
+          context: .
           file: core/state_management/Dockerfile
           push: true
           tags: |
@@ -131,7 +131,7 @@ jobs:
       - name: 建置 Analysis Service
         uses: docker/build-push-action@v5
         with:
-          context: sub_system/analysis_service
+          context: .
           file: sub_system/analysis_service/Dockerfile
           push: true
           tags: |
